[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/steam/AchievementTest.gd" type="Script" id=1]

[node name="AchievementTest" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1537.0
margin_top = 65.0
margin_right = 1577.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0

[node name="AchievmentUnlocked" type="Button" parent="."]
margin_left = 798.0
margin_top = 173.0
margin_right = 1108.0
margin_bottom = 298.0
text = "Achievement Unlocked"

[node name="AchievmentReset" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 801.0
margin_top = 462.0
margin_right = 1098.0
margin_bottom = 612.0
text = "Achievement Reset"

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 649.0
margin_top = 744.0
margin_right = 1367.0
margin_bottom = 835.0

[node name="Achievements" type="OptionButton" parent="."]
margin_left = 814.0
margin_top = 372.0
margin_right = 843.0
margin_bottom = 392.0

[connection signal="pressed" from="AchievmentUnlocked" to="." method="_on_AchievmentUnlocked_pressed"]
[connection signal="pressed" from="AchievmentReset" to="." method="_on_AchievmentLocked_pressed"]
